--- a/style.css
+++ b/style.css
@@ -1,1 +1,26 @@
 @import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Roboto+Slab:wght@500&family=Source+Sans+Pro:wght@200;400;600&display=swap');
+
+body {
+    border-color: white;
+    font-family: "Source Sans Pro";
+    background-color: white;
+    text-align: center;
+    width: 700px;
+    border-style: solid;
+    margin-left: 800px;
+    margin-right: 200px;
+    margin-top: 100px;
+    margin-bottom: 100px;
+}
+
+header {
+    font-family: "Abril Fatface";
+}
+
+h1 {
+    font-family: "Roboto Slab"
+}
+
+html {
+    background-color: lightgrey;
+}
